--- a/lab 1.ipynb
+++ b/lab 1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 1,
    "id": "0be8dbde",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 2,
    "id": "b64a4980",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 3,
    "id": "bf6eb764",
    "metadata": {},
    "outputs": [
@@ -49,7 +49,7 @@
        "     njev: 5"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 4,
    "id": "1fe59e95",
    "metadata": {},
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 5,
    "id": "04f5e162-2112-43fc-84f7-59aee86733f7",
    "metadata": {},
    "outputs": [
@@ -114,33 +114,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 17,
    "id": "fb0ee451-1e2c-48f2-bc93-6ea77c682b35",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def porazr(a,b,p = 100):\n",
+    "def porazr(fun,a,b,p = 100,eps = 10**-6):\n",
     "    h = (b-a)/p\n",
     "    x = a\n",
-    "    f0 = func(x)\n",
-    "    f1 = func(x+h)\n",
+    "    f0 = fun(x)\n",
+    "    f1 = fun(x+h)\n",
     "    x+=h\n",
     "    while(f1 < f0 and x < b):\n",
     "#         print(f1,f0, x+h, func(x+h))\n",
     "        f0 = f1\n",
     "        x +=h\n",
-    "        f1 = func(x)   \n",
+    "        f1 = fun(x)   \n",
     "    \n",
-    "    h = h/p\n",
+    "    h = eps\n",
     "    f0 = f1\n",
     "    x -=h\n",
-    "    f1 = func(x)\n",
+    "    f1 = fun(x)\n",
     "#     print(f0,f1,x)\n",
     "    \n",
-    "    while(f1 <= f0):\n",
+    "    while(f1 <= f0 and x >= a):\n",
     "        f0 = f1\n",
     "        x -= h\n",
-    "        f1 = func(x)\n",
+    "        f1 = fun(x)\n",
     "        #print(f0,f1, x)\n",
     "    else:\n",
     "        return x,f1"
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 24,
    "id": "46265de9",
    "metadata": {},
    "outputs": [],
@@ -182,44 +182,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 25,
    "id": "71e86b2e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.8241279999999988, -1.6421304128477607)"
+       "(0.8241309999999469, -1.6421304129080565)"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "porazr(0,1,500)"
+    "porazr(func,0,1,500)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 26,
    "id": "1ee8f49e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.8241170099970487, 0, 66)"
+       "(0.8241326313027102, 0, 101)"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "polyline_method(func, deriv1, 0,1,10**-4)"
+    "polyline_method(func, deriv1, 0,1,10**-6)"
    ]
   },
   {
