pre-last version

--- a/lab 1.ipynb
+++ b/lab 1.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "f18a0bff-9cc5-4e0f-971e-28fac10b4eed",
+   "metadata": {},
+   "source": [
+    "# Алешко Альберт   \n",
+    "# АС-21-05   \n",
+    "# Вариант 1"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 161,
    "id": "0be8dbde",
@@ -458,13 +468,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 274,
    "id": "faf8b8ab",
    "metadata": {},
    "outputs": [],
    "source": [
     "def newton_raphson_method(func, dfunc, d2func, x, eps, lr=1.0,\n",
-    "                          n_eps=0.01, max_iter=10_000,\n",
+    "                          n_eps=0.01, max_iter=100_000,\n",
     "                          callback=None, print_info=False):\n",
     "    \n",
     "    if callback is None:\n",
@@ -1028,6 +1038,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "14c31802-bba7-468f-8f30-a6b54fde5447",
+   "metadata": {},
+   "source": [
+    "### Результат встроенными методами"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 228,
    "id": "6a82b5b5-0b6a-463f-8c45-5108381d1b6c",
@@ -1087,6 +1105,14 @@
     "x = np.arange(lower_bound, upper_bound, eps)\n",
     "plt.plot(x, f2(x))\n",
     "plt.scatter(minimum['x'], minimum['fun'], color = 'red')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "721c25fb-6569-40e5-b8d0-7f0e9a93a2f5",
+   "metadata": {},
+   "source": [
+    "### Результат написанными методами"
    ]
   },
   {
@@ -1205,20 +1231,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 269,
    "id": "14c019c7-ff54-4536-a013-1f585c511ec6",
    "metadata": {},
    "outputs": [],
    "source": [
     "lower_bound = -2\n",
     "upper_bound = 2\n",
-    "x0 = 0.5\n",
+    "x0 = 1.356\n",
     "eps = 10**-4"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5be79d78-5b20-4cf7-b17e-8ca6e0b460f8",
+   "metadata": {},
+   "source": [
+    "### Результат встроенными методами"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 270,
    "id": "860015eb-b3cd-4e94-8791-5a419d2ae0f2",
    "metadata": {},
    "outputs": [
@@ -1228,14 +1262,14 @@
        " message: Optimization terminated successfully.\n",
        " success: True\n",
        "  status: 0\n",
-       "     fun: 5.934729841099885e-67\n",
-       "       x: [ 7.704e-34]\n",
+       "     fun: 3.0814879110195774e-33\n",
+       "       x: [ 5.551e-17]\n",
        "     nit: 2\n",
-       "   direc: [[-5.551e-17]]\n",
-       "    nfev: 24"
+       "   direc: [[ 1.000e+00]]\n",
+       "    nfev: 14"
       ]
      },
-     "execution_count": 255,
+     "execution_count": 270,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1247,17 +1281,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 271,
    "id": "19e6c01a-833d-42b6-a5c3-4c9c61c6e798",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x21407e9c560>"
+       "<matplotlib.collections.PathCollection at 0x2140ad54560>"
       ]
      },
-     "execution_count": 256,
+     "execution_count": 271,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1279,24 +1313,53 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "51e5bc0a-6ee9-4aee-a10d-732c8e480c73",
+   "metadata": {},
+   "source": [
+    "### Результат написанными методами"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 272,
    "id": "ed4b7860-4415-4418-8484-e1d26e6c915b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.0, 4)"
+       "(-8.887252641708726e-15, 7)"
       ]
      },
-     "execution_count": 258,
+     "execution_count": 272,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "newton_raphson_method(f3, deriv1f3, deriv2f3, x0, eps, eps)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 273,
+   "id": "a0e8ca99-7eb0-4a75-9bfc-aeee777b42f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-8.887252641708726e-15, 7)"
+      ]
+     },
+     "execution_count": 273,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "newton_method(f3, deriv1f3, deriv2f3, x0, eps)"
    ]
   },
   {
