--- a/lab4.ipynb
+++ b/lab4.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "id": "09e03c7b-8759-4c19-90b5-0b2709fa298b",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "id": "af141164-9403-4461-9c3f-ce5c62cbbeef",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "id": "063c3a48-2067-4b9d-9369-d51c78c5ec34",
    "metadata": {},
    "outputs": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "id": "6f6a624f-45ab-43b7-bcbd-20186456fcc8",
    "metadata": {},
    "outputs": [
@@ -161,21 +161,21 @@
        "      <td>Penalty Method</td>\n",
        "      <td>[2.421593684700156, -2.3824015491189847, 3.955...</td>\n",
        "      <td>15.495761</td>\n",
-       "      <td>0.003003</td>\n",
+       "      <td>0.002903</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Gradient Projection</td>\n",
        "      <td>[2.4338043573649575, -2.3774637617566947, 3.94...</td>\n",
        "      <td>15.519397</td>\n",
-       "      <td>3.539639</td>\n",
+       "      <td>3.402939</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Math method</td>\n",
+       "      <td>Optimize method</td>\n",
        "      <td>[2.423076791204793, -2.384615472530138, 3.9615...</td>\n",
        "      <td>15.519231</td>\n",
-       "      <td>0.003742</td>\n",
+       "      <td>0.003884</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -185,15 +185,15 @@
        "                Method                              Solution (x1, x2, x3)  \\\n",
        "0       Penalty Method  [2.421593684700156, -2.3824015491189847, 3.955...   \n",
        "1  Gradient Projection  [2.4338043573649575, -2.3774637617566947, 3.94...   \n",
-       "2          Math method  [2.423076791204793, -2.384615472530138, 3.9615...   \n",
+       "2      Optimize method  [2.423076791204793, -2.384615472530138, 3.9615...   \n",
        "\n",
        "   Objective Value  Time (s)  \n",
-       "0        15.495761  0.003003  \n",
-       "1        15.519397  3.539639  \n",
-       "2        15.519231  0.003742  "
+       "0        15.495761  0.002903  \n",
+       "1        15.519397  3.402939  \n",
+       "2        15.519231  0.003884  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,6 @@
     "    result = minimize(penalty_objective, x0, args=(lambdas,), method='SLSQP')\n",
     "    print(\"Penalty\\n\",result)\n",
     "    end_time = time.time()\n",
-    "    # return 0, 0, 0\n",
     "    return result.x, objective(result.x), end_time - start_time\n",
     "\n",
     "# Gradient projection method\n",
@@ -232,7 +231,7 @@
     "    result = minimize(lambda y: np.linalg.norm(y - x), x, constraints=cons)\n",
     "    return result.x\n",
     "\n",
-    "def gradient_projection(x0, alpha=0.01, tol=1e-4, max_iter=100000):\n",
+    "def gradient_projection(x0, alpha=0.01, tol=1e-4, max_iter=10000):\n",
     "    x = np.array(x0)\n",
     "    start_time = time.time()\n",
     "    for _ in range(max_iter):\n",
@@ -258,7 +257,7 @@
     "\n",
     "# Create a comparison table\n",
     "data = {\n",
-    "    \"Method\": [\"Penalty Method\", \"Gradient Projection\", \"Math method\"],\n",
+    "    \"Method\": [\"Penalty Method\", \"Gradient Projection\", \"Optimize method\"],\n",
     "    \"Solution (x1, x2, x3)\": [penalty_solution, gradient_solution, optimal_solution],\n",
     "    \"Objective Value\": [penalty_objective_value, gradient_objective_value, objective_value],\n",
     "    \"Time (s)\": [penalty_time, gradient_time, obj_time]\n",
@@ -268,14 +267,6 @@
     "\n",
     "df"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bb97cb8a-b9e4-4f49-a4db-8e976878e2aa",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
